; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_os_win32.c_mch_delay.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_os_win32.c_mch_delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@p_mzq = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mch_delay(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load i64, i64* %3, align 8
  %9 = trunc i64 %8 to i32
  %10 = call i32 @Sleep(i32 %9)
  br label %14

11:                                               ; preds = %2
  %12 = load i64, i64* %3, align 8
  %13 = call i32 @WaitForChar(i64 %12)
  br label %14

14:                                               ; preds = %11, %7
  ret void
}

declare dso_local i32 @Sleep(i32) #1

declare dso_local i32 @WaitForChar(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
